update to Java 11